--- a/SnapinChat2.html
+++ b/SnapinChat2.html
@@ -52,8 +52,8 @@
 			function initESW (gslbBaseURL) {
 				embedded_svc.settings.displayHelpButton = true; //Or false
 				embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-				embedded_svc.settings.widgetFontSize = '12px';
-                embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT';
+				//embedded_svc.settings.widgetFontSize = '12px';
+               			embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT';
 				
 				// TODO start : This section needs to be updated for passing the user status to pre chat (Currently passing the status based on radio inputs above
 				var userstate = document.getElementsByName("userstate");
