--- a/SnapinChat4.html
+++ b/SnapinChat4.html
@@ -22,8 +22,8 @@
 				var s = document.createElement('script');
 				s.setAttribute('src', 'https://toyrusca--uat.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 				s.onload = function() {
-					var language = 'FR';
-                    //var email = 'elenaachaney@dayrep.com';
+					var language = 'EN';
+                    			var email = '';
                     
 					initESW('https://service.force.com', language, email);
 					
