--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -20,7 +20,7 @@
                 		// TODO : End
                 
 				embedded_svc.settings.displayHelpButton = true; //Or false
-				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT';
+				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
 				embedded_svc.settings.language = language;
 
 				// Sets the auto-population of pre-chat form fields
