--- a/SnapInLanguage1.html
+++ b/SnapInLanguage1.html
@@ -19,6 +19,9 @@
 
 				embedded_svc.settings.displayHelpButton = true; //Or false
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
+				embedded_svc.settings.disabledMinimizedText = 'LIVE CHAT IS CLOSED';
+
+
 				embedded_svc.settings.language = language;
 
 				// Sets the auto-population of pre-chat form fields
