--- a/SnapInLanguage1.html
+++ b/SnapInLanguage1.html
@@ -27,7 +27,7 @@
 				// Sets the auto-population of pre-chat form fields
 				//embedded_svc.settings.prepopulatedPrechatFields = {Email: email}; 
 
-				embedded_svc.snippetSettingsFile.extraPrechatFormDetails = [
+				embedded_svc.settings.extraPrechatFormDetails = [
 					{
 					"label": "Language",
 					"value": language,
