--- a/SnapInLanguage4.html
+++ b/SnapInLanguage4.html
@@ -27,14 +27,15 @@
 				// Sets the auto-population of pre-chat form fields
 				embedded_svc.settings.prepopulatedPrechatFields = {Email: email, Chat_Language__c: language}; 
 
-				embedded_svc.settings.extraPrechatFormDetails = [
-					{
-					"label": "Language",
-					"value": language,
-					"transcriptFields": ["Language__c"],
-					"displayToAgent":true
+				embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+					console.log('language--',language);
+				        if (language === "EN"){
+					    return "57303000000001X";
 					}
-				];
+					else if(language === "FR"){
+					    return "57303000000001c";
+					}
+				}
 
 				embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 				embedded_svc.settings.entryFeature = 'LiveAgent';
