--- a/SnapInForDemoLoggedOut.html
+++ b/SnapInForDemoLoggedOut.html
@@ -2,8 +2,9 @@
 	<body> 		
 		<!-- We are hiding the standard chat widget with the css below-->
 		<style type='text/css'>
-			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {}
+			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {background: #0f4dbc;}
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonEnabled {}
+			
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
