--- a/SnapInSkills4.html
+++ b/SnapInSkills4.html
@@ -49,7 +49,7 @@
 					{
 					baseLiveAgentContentURL: 'https://c.la2-c1cs-ia4.salesforceliveagent.com/content',
 					deploymentId: '57203000000001S',
-					buttonId: '57303000000001N',
+					buttonId: '57303000000001c',
 					baseLiveAgentURL: 'https://d.la2-c1cs-ia4.salesforceliveagent.com/chat',
 					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I03000000GmaJEAS_1742f3b36e6',
 					isOfflineSupportEnabled: false
