--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -2,8 +2,8 @@
 	<body> 		
 		<!-- We are hiding the standard chat widget with the css below-->
 		<style type='text/css'>
-			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {}
-			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonEnabled {}
+			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {background: #0f4dbc;}
+			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonEnabled {background: #0f4dbc;}
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
