--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -4,6 +4,11 @@
 		<style type='text/css'>
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {background: #0f4dbc;}
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonEnabled {background: #0f4dbc;}
+			.embeddedServiceLiveAgentStateChat .messageArea,
+			.embeddedServiceLiveAgentStateChatItem.chatMessage,
+			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}
+			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled  {background: url({!$Resource.GeoffreyImg});background-size: 100%; background-position: top; background-repeat: no-repeat; display: block; width: 84px; height: 74px; position: fixed; right: 165px; bottom: -9px; z-index: 9; content: ''; }
+        
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
