--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -7,6 +7,8 @@
 			.embeddedServiceLiveAgentStateChat .messageArea,
 			.embeddedServiceLiveAgentStateChatItem.chatMessage,
 			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}
+			.embeddedServiceLiveAgentStateChatItem .nameAndTimeContent {color:#fff;}
+			.embeddedServiceLiveAgentStateChatItem.agent .nameAndTimeDotDivider {background-color: #fff;}
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled  {background: url({!$Resource.GeoffreyImg});background-size: 100%; background-position: top; background-repeat: no-repeat; display: block; width: 84px; height: 74px; position: fixed; right: 165px; bottom: -9px; z-index: 9; content: ''; }
         
 		</style>
