--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -10,7 +10,7 @@
 			.embeddedServiceLiveAgentStateChatItem .nameAndTimeContent {color:#fff;}
 			.embeddedServiceLiveAgentStateChatItem.agent .nameAndTimeDotDivider {background-color: #fff;}
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled  {background: url({!$Resource.GeoffreyImg});background-size: 100%; background-position: top; background-repeat: no-repeat; display: block; width: 84px; height: 74px; position: fixed; right: 165px; bottom: -9px; z-index: 9; content: ''; }
-        
+			.embeddedServiceHelpButton .helpButton:before { content:''; background:url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000)}
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
