--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -9,8 +9,8 @@
 			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}
 			.embeddedServiceLiveAgentStateChatItem .nameAndTimeContent {color:#fff;}
 			.embeddedServiceLiveAgentStateChatItem.agent .nameAndTimeDotDivider {background-color: #fff;}
-			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled  {background: url({!$Resource.GeoffreyImg});background-size: 100%; background-position: top; background-repeat: no-repeat; display: block; width: 84px; height: 74px; position: fixed; right: 165px; bottom: -9px; z-index: 9; content: ''; }
-			.embeddedServiceHelpButton .helpButton:before { content:''; background:url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000)}
+			.embeddedServiceHelpButton .helpButton:before { background: url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000) !important; background-size: 100px; background-position: top left; content: ''; position: absolute; width: 100px; height: 100px; z-index: 99; }
+			
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
