--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -9,7 +9,7 @@
 			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}
 			.embeddedServiceLiveAgentStateChatItem .nameAndTimeContent {color:#fff;}
 			.embeddedServiceLiveAgentStateChatItem.agent .nameAndTimeDotDivider {background-color: #fff;}
-			.embeddedServiceHelpButton .helpButton:before { background: url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000); background-size: 100px; background-position: bottom left; background-repeat: no-repeat; content: ''; position: absolute; width: 100%; height: 100px; z-index: 99; bottom: 0; left: -44px; }
+			.embeddedServiceHelpButton .helpButton:before { background: url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000); background-size: 100px; background-position: bottom left; background-repeat: no-repeat; content: ''; position: absolute; width: 100px; height: 100px; z-index: 99; bottom: 0; left: -44px; }
 			
 		</style>
 		
