--- a/SnapinChatPersonAccount2.html
+++ b/SnapinChatPersonAccount2.html
@@ -28,12 +28,12 @@
 				embedded_svc.settings.prepopulatedPrechatFields = {Email: email, Chat_Language__c: language}; 
                 
 				embedded_svc.settings.extraPrechatFormDetails = [{
+										   "label": "Email",
+										   "value": "annemarie_strand@yahoo.com"
+										},
+										{
 										    "label":"Record Type ID",
 										    "value":"0121U000000G9pFQAS"﻿
-										},
-										 {
-											 "label": "Email",
-										  "value": email
 										}];
 
 				embedded_svc.settings.extraPrechatInfo = [{
