--- a/SnapinChatPersonAccount2.html
+++ b/SnapinChatPersonAccount2.html
@@ -51,7 +51,7 @@
                                                                 {
                                                                     "doCreate":true,
                                                                     "doFind":true,
-                                                                    "fieldName":"Email",
+                                                                    "fieldName":"PersonEmail",
                                                                     "isExactMatch":true,
                                                                     "label":"Email"
                                                                 }]
