--- a/SnapinChatPersonAccount2.html
+++ b/SnapinChatPersonAccount2.html
@@ -15,7 +15,7 @@
 			// Auto generated code for chat settings 
 			var initESW = function(gslbBaseURL) {
 				var language = 'FR';
-				var email = 'annemarie_strand@yahoo.com';
+				var email = 'tiarose_14@hotmail.com';
 
 				embedded_svc.settings.displayHelpButton = true; //Or false
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
@@ -29,7 +29,7 @@
                 
 				embedded_svc.settings.extraPrechatFormDetails = [{
 										   "label": "Email",
-										   "value": "annemarie_strand@yahoo.com"
+										   "value": email
 										},
 										{
 										    "label":"Record Type ID",
