--- a/SnapinChatPersonAccount2.html
+++ b/SnapinChatPersonAccount2.html
@@ -15,7 +15,7 @@
 			// Auto generated code for chat settings 
 			var initESW = function(gslbBaseURL) {
 				var language = 'FR';
-				var email = 'tiarose_14@hotmail.com';
+				var email = 'annemarie_strand@yahoo.com';
 
 				embedded_svc.settings.displayHelpButton = true; //Or false
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
