--- a/SnapinChatPersonAccount2.html
+++ b/SnapinChatPersonAccount2.html
@@ -17,7 +17,7 @@
 				var language = 'FR';
 				var email = 'annemarie_strand@yahoo.com';
 
-				embedded_svc.settings.displayHelpButton = true; //Or false
+				embedded_svc.settings.displayHelpButton = true; ///Or false
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
 				embedded_svc.settings.disabledMinimizedText = 'LIVE CHAT IS CLOSED';
 
