--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -4,12 +4,14 @@
 		<style type='text/css'>
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {background: #0f4dbc;}
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonEnabled {background: #0f4dbc;}
-			.embeddedServiceLiveAgentStateChat .messageArea,
-			.embeddedServiceLiveAgentStateChatItem.chatMessage,
-			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}
 			.embeddedServiceLiveAgentStateChatItem .nameAndTimeContent {color:#fff;}
 			.embeddedServiceLiveAgentStateChatItem.agent .nameAndTimeDotDivider {background-color: #fff;}
 			.embeddedServiceHelpButton .helpButton:before { background: url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000); background-size: 95px; background-position: bottom left; background-repeat: no-repeat; content: ''; position: absolute; width: 100px; height: 69px; z-index: 99; bottom: 0; left: -52px; }
+			
+			/*.embeddedServiceLiveAgentStateChat .messageArea,
+			.embeddedServiceLiveAgentStateChatItem.chatMessage,
+			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}*/
+		
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
