--- a/SnapInForDemoLoggedOut.html
+++ b/SnapInForDemoLoggedOut.html
@@ -6,7 +6,7 @@
 			.embeddedServiceHelpButton .helpButton .uiButton.helpButtonEnabled {background: #0f4dbc;}
 			.embeddedServiceHelpButton .helpButton:before { background: url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000); background-size: 95px; background-position: bottom left; background-repeat: no-repeat; content: ''; position: absolute; width: 100px; height: 69px; z-index: 99; bottom: 0; left: -52px; }
 			.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background: url(https://toyrusca--uat--c.documentforce.com/servlet/servlet.ImageServer?id=015030000004pLI&oid=00D030000008acd&lastMod=1600068436000); background-size: 95px; background-position: bottom left; background-repeat: no-repeat; content: ''; position: fixed; width: 100px; height: 69px; z-index: 99; bottom: 0; right: 157px; }
-
+			.embeddedServiceSidebarMinimizedDefaultUI.newMessage, .embeddedServiceSidebarMinimizedDefaultUI.idleTimeout { background: #0f4dbc;}
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
