--- a/ToysRUsChatEnglish.html
+++ b/ToysRUsChatEnglish.html
@@ -22,7 +22,7 @@
 				
 				// Pass the language and email parameters
 				var language = 'EN';
-				var email = 'annemarie_strand@yahoo.com';
+				var email = '';
 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
