--- a/ToysRUsChatFrench.html
+++ b/ToysRUsChatFrench.html
@@ -22,7 +22,7 @@
 				
 				// Pass the language and email parameters
 				var language = 'FR';
-				var email = '';
+				var email = 'annemarie_strand@yahoo.com';
 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
@@ -67,6 +67,8 @@
 															},
 															{
 																"entityName": "Case",
+																"showOnCreate":true,
+																"saveToTranscript": "CaseId",
 																"entityFieldMaps": [{
 																	"isExactMatch": false,
 																	"fieldName": "Subject",
