--- a/ToysRUsChatEnglish.html
+++ b/ToysRUsChatEnglish.html
@@ -39,7 +39,7 @@
 																	},
 																	{
 																		// This is the Person Account record type to find the existing Person Accounts
-																		"label":"Record Type ID",
+																		"label":"RecordTypeId",
 																		"value":"0121U000000G9pFQAS"﻿
 																	},
 					  												{
@@ -64,7 +64,7 @@
 																  "doFind": false,
 																  "fieldName": "RecordTypeId",
 																  "isExactMatch": true, 
-																  "label": "Record Type ID"
+																  "label": "RecordTypeId"
 																},
 																{
 																	"doCreate":true,
