--- a/ToysRUsChatEnglish.html
+++ b/ToysRUsChatEnglish.html
@@ -23,7 +23,7 @@
 				// Pass the language and email parameters
 				var language = 'EN';
 				var email = '';
-
+				console.log('email---', email);
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
 				embedded_svc.settings.disabledMinimizedText = 'LIVE CHAT IS CLOSED';
