--- a/ToysRUsChatFrench.html
+++ b/ToysRUsChatFrench.html
@@ -22,7 +22,7 @@
 				
 				// Pass the language and email parameters
 				var language = 'FR';
-				var email = '';//'annemarie_strand@yahoo.com';
+				var email = 'annemarie_strand@yahoo.com';
 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
