--- a/ToysRUsChatEnglish.html
+++ b/ToysRUsChatEnglish.html
@@ -77,7 +77,22 @@
 																'saveToTranscript':'AccountId',
 																"linkToEntityName": "Case",
    																"linkToEntityField": "AccountId",
-																'entityFieldMaps':[{
+																'entityFieldMaps':[
+																{
+																	"isExactMatch": false,
+																	"fieldName": "FirstName",
+																	"doCreate": true,
+																	"doFind": false,
+																	"label": "First Name"
+																}
+																{
+																	"isExactMatch": false,
+																	"fieldName": "LastName",
+																	"doCreate": true,
+																	"doFind": false,
+																	"label": "Last Name"
+																}
+															    {
 																  "doCreate": true,
 																  "doFind": false,
 																  "fieldName": "RecordTypeId",
