--- a/ToysRUsChatEnglishTest.html
+++ b/ToysRUsChatEnglishTest.html
@@ -29,7 +29,7 @@
 				embedded_svc.settings.language = language;
 
 				// Sets the auto-population of pre-chat form fields
-				embedded_svc.settings.prepopulatedPrechatFields = {Email: email, Chat_Language__c: language}; 
+				embedded_svc.settings.prepopulatedPrechatFields = {Chat_Language__c: language}; 
                 
 				embedded_svc.settings.extraPrechatFormDetails = [
 																	{
@@ -106,7 +106,7 @@
 																	"doFind":false,
 																	"fieldName":"Email_Key__c",
 																	"isExactMatch":true,
-																	"label":"Email Key"
+																	"label":"Email"
 																}]
 															},
 															{
