--- a/ToysRUsChatEnglishTest.html
+++ b/ToysRUsChatEnglishTest.html
@@ -29,9 +29,13 @@
 				embedded_svc.settings.language = language;
 
 				// Sets the auto-population of pre-chat form fields
-				embedded_svc.settings.prepopulatedPrechatFields = {Chat_Language__c: language}; 
+				embedded_svc.settings.prepopulatedPrechatFields = {Email: email, Chat_Language__c: language}; 
                 
-				embedded_svc.settings.extraPrechatFormDetails = [
+				embedded_svc.settings.extraPrechatFormDetails = [	
+																	{
+																		"label":"Email",
+																		"value":email
+																	}
 																	{
 																		// This is the Person Account record type to find the existing Person Accounts
 																		"label":"RecordTypeId",
