--- a/ToysRUsChatEnglishTest.html
+++ b/ToysRUsChatEnglishTest.html
@@ -39,7 +39,7 @@
 																	{
 																		// This is the Person Account record type to find the existing Person Accounts
 																		"label":"RecordTypeId",
-																		"value":"0121U000000G9pFQAS"﻿
+																		"value":"0121U000000G9pFQAS"
 																	},
 					  												{
 																		"label": "Status",
