--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -23,7 +23,7 @@
 				//------- TODO: Pass the language and email parameters
 				var language = 'EN';
 				var email = '';
-                //------TODO end
+                //-------TODO end
                 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
