--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -23,7 +23,7 @@
 				//------- TODO: Pass the language and email parameters
 				var language = 'EN';
 				var email = '';
-                //--------TODO end
+                		//--------TODO end
                 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
@@ -159,7 +159,7 @@
 						buttonId: '57303000000001N',
 						baseLiveAgentURL: 'https://d.la2-c1cs-ia4.salesforceliveagent.com/chat',
 						eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I03000000GmaJEAS_1742f3b36e6',
-						isOfflineSupportEnabled: true
+						isOfflineSupportEnabled: false
 					}
 				);
 		    }; 
