--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -27,7 +27,7 @@
                 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
-				embedded_svc.settings.disabledMinimizedText = 'We\'re so sorry! All of our customer service representatives are currently unavailable. Please leave a message using our contact form and one of our service representatives will get back to you soon!';
+				embedded_svc.settings.disabledMinimizedText = 'LIVE CHAT IS CLOSED';
 				embedded_svc.settings.language = language;
 				
 				// Sets the auto-population of pre-chat form fields
