--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -159,7 +159,7 @@
 						buttonId: '57303000000001N',
 						baseLiveAgentURL: 'https://d.la2-c1cs-ia4.salesforceliveagent.com/chat',
 						eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I03000000GmaJEAS_1742f3b36e6',
-						isOfflineSupportEnabled: false
+						isOfflineSupportEnabled: true
 					}
 				);
 		    }; 
