--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -12,7 +12,21 @@
 			/*.embeddedServiceLiveAgentStateChat .messageArea,
 			.embeddedServiceLiveAgentStateChatItem.chatMessage,
 			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}*/
-		
+			
+			@media (max-width:768px){
+				.embeddedServiceHelpButton .helpButton .uiButton {
+					width: 50px;
+					height: 50px;
+					min-width: unset;
+				}
+				.embeddedServiceSidebarMinimizedDefaultUI {
+				    width: 50px;
+				    height: 50px;
+				    min-width: unset;
+				    min-height: unset;
+				    border-radius: 50px;
+				}
+			}
 		</style>
 		
 		<!-- Embedded chat deployment code (Auto Generated) -->
