--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -14,18 +14,9 @@
 			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}*/
 			
 			@media (max-width:768px){
-				.embeddedServiceHelpButton .helpButton .uiButton {
-					width: 50px;
-					height: 50px;
-					min-width: unset;
-				}
-				.embeddedServiceSidebarMinimizedDefaultUI {
-				    width: 50px;
-				    height: 50px;
-				    min-width: unset;
-				    min-height: unset;
-				    border-radius: 50px;
-				}
+			.embeddedServiceHelpButton .helpButton:before{display:none;}
+			.embeddedServiceHelpButton .helpButton .uiButton { width: 50px; height: 50px; min-width: unset; border-radius: 100%; }
+			.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
 			}
 		</style>
 		
