--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -17,6 +17,7 @@
 			.embeddedServiceHelpButton .helpButton:before{display:none;}
 			.embeddedServiceHelpButton .helpButton .uiButton { width: 50px; height: 50px; min-width: unset; border-radius: 100%; }
 			.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
+			.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
 			}
 		</style>
 		
