--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -14,8 +14,8 @@
 			.embeddedServiceLiveAgentStateChat .chatSessionStartTime {background: #0f4dbc !important;}*/
 			
 			@media (max-width:768px){
-				.embeddedServiceHelpButton .helpButton:before{display:none;}
-				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before {display:none;}
+				/*.embeddedServiceHelpButton .helpButton:before{display:none;}
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before {display:none;}*/
 				.embeddedServiceHelpButton .helpButton .uiButton { width: 50px; height: 50px; min-width: unset; border-radius: 100%; }
 				.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
 				.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
