--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -20,6 +20,7 @@
 				.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
 				.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
 				
 			}
 		</style>
