--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -21,7 +21,7 @@
 				.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
 				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
-				
+				.embeddedServiceHelpButton .helpButton:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
 			}
 		</style>
 		
