--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -22,6 +22,8 @@
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
 				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
 				.embeddedServiceHelpButton .helpButton:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
+				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
+
 			}
 		</style>
 		
