--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -23,6 +23,8 @@
 				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
 				.embeddedServiceHelpButton .helpButton:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
 				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
+				.embeddedServiceHelpButton .helpButton { bottom: 55px; right:30px !important;}
+				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 55px; right:30px !important;}
 
 			}
 		</style>
