--- a/SnapInForDemoLoggedOut.html
+++ b/SnapInForDemoLoggedOut.html
@@ -9,12 +9,15 @@
 			.embeddedServiceSidebarMinimizedDefaultUI.newMessage, .embeddedServiceSidebarMinimizedDefaultUI.idleTimeout { background: #0f4dbc;}
 			
 			@media (max-width:768px){
-				.embeddedServiceHelpButton .helpButton:before { display:none; }
-				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before {display:none; }
 				.embeddedServiceHelpButton .helpButton .uiButton { width: 50px; height: 50px; border-radius: 100%; min-width: unset; }
 				.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
 				.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
+				.embeddedServiceHelpButton .helpButton:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
+				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
+				.embeddedServiceHelpButton .helpButton { bottom: 55px; right:30px !important;}
+				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 55px; right:30px !important;}
 			}
 		</style>
 		
