--- a/SnapInForDemoLoggedOut.html
+++ b/SnapInForDemoLoggedOut.html
@@ -13,8 +13,8 @@
 				.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
 				.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
-				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%;width: 50px; height: 50px; right: 43px;}
-				.embeddedServiceHelpButton .helpButton:before { background-size: 100%; width: 50px; height: 50px; right: 30px; left: unset; bottom: -6px;}
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before {background-size: 100%; width: 50px; height: 50px; right: 0; bottom: 44px;}
+				.embeddedServiceHelpButton .helpButton:before { background-size: 100%; width: 50px; height: 50px; right: 0; left: unset; bottom: 44px;}
 				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
 				.embeddedServiceHelpButton .helpButton { bottom: 55px; right:30px !important;}
 				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 55px; right:30px !important;}
