--- a/SnapInForDemoLoggedOut.html
+++ b/SnapInForDemoLoggedOut.html
@@ -18,6 +18,7 @@
 				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
 				.embeddedServiceHelpButton .helpButton { bottom: 55px; right:30px !important;}
 				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 55px; right:30px !important;}
+				.embeddedServiceSidebarMinimizedDefaultUI .minimizedImage, .embeddedServiceSidebarMinimizedDefaultUI .embeddedServiceIcon {margin-right: 0;}
 			}
 		</style>
 		
