--- a/SnapInForDemoLoggedOut.html
+++ b/SnapInForDemoLoggedOut.html
@@ -13,12 +13,12 @@
 				.embeddedServiceSidebarMinimizedDefaultUI { width: 50px; height: 50px; min-width: unset; min-height: unset; border-radius: 100%; }
 				.embeddedServiceHelpButton .embeddedServiceIcon { margin: 0 4px;}
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
-				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before {background-size: 100%; width: 50px; height: 50px; right: 0; bottom: 44px;}
 				.embeddedServiceHelpButton .helpButton:before { background-size: 100%; width: 50px; height: 50px; right: 0; left: unset; bottom: 44px;}
 				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
 				.embeddedServiceHelpButton .helpButton { bottom: 55px; right:30px !important;}
 				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 55px; right:30px !important;}
 				.embeddedServiceSidebarMinimizedDefaultUI .minimizedImage, .embeddedServiceSidebarMinimizedDefaultUI .embeddedServiceIcon {margin-right: 0;}
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%; width: 50px; height: 50px; right: 29px; bottom: 104px; }
 			}
 		</style>
 		
