--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -34,9 +34,9 @@
 					embedded_svc.settings.offlineSupportMinimizedText = 'LIVE CHAT IS CLOSED';   
 			    }
 				else if(language === "FR"){
-					embedded_svc.settings.defaultMinimizedText = 'LE CHAT EN DIRECT EST OUVERT';
-					embedded_svc.settings.disabledMinimizedText = 'LE CHAT EN DIRECT EST FERMÉ';
-					embedded_svc.settings.offlineSupportMinimizedText = 'LE CHAT EN DIRECT EST FERMÉ'; 
+					embedded_svc.settings.defaultMinimizedText = 'CHAT OUVERT';
+					embedded_svc.settings.disabledMinimizedText = 'CHAT FERMÉ';
+					embedded_svc.settings.offlineSupportMinimizedText = 'CHAT FERMÉ'; 
 				}
 				
 				
