--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -132,11 +132,13 @@
 					embedded_svc.settings.defaultMinimizedText = 'LIVE CHAT IS OPEN';
 					embedded_svc.settings.disabledMinimizedText = 'LIVE CHAT IS CLOSED';
 					embedded_svc.settings.offlineSupportMinimizedText = 'LIVE CHAT IS CLOSED';   
-			    }
+					embedded_svc.settings.loadingText = 'Loading'; 
+			    	}
 				else if(language === "FR"){
-					embedded_svc.settings.defaultMinimizedText = 'CHAT OUVERT';
-					embedded_svc.settings.disabledMinimizedText = 'CHAT FERMÉ';
-					embedded_svc.settings.offlineSupportMinimizedText = 'CHAT FERMÉ'; 
+					embedded_svc.settings.defaultMinimizedText = 'CLAVARDAGE OUVERT';
+					embedded_svc.settings.disabledMinimizedText = 'CLAVARDAGE FERMÉ';
+					embedded_svc.settings.offlineSupportMinimizedText = 'CLAVARDAGE FERMÉ'; 
+					embedded_svc.settings.loadingText = 'Chargement'; 
 				}
 				
 				
