--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -264,7 +264,7 @@
 					'https://uat-truca.cs196.force.com',
 					gslbBaseURL,
 					'00D030000008acd',
-					'For_Logged_in_User',
+					'Toys_R_Us_Website',
 					{
 						baseLiveAgentContentURL: 'https://c.la2-c1cs-ia4.salesforceliveagent.com/content',
 						deploymentId: '57203000000001S',
