--- a/ToysRUsChatFrenchFinal.html
+++ b/ToysRUsChatFrenchFinal.html
@@ -122,7 +122,7 @@
 				
 				// Pass the language and email parameters
 				var language = 'FR';
-				var email = '';
+				var email = 'annemarie_strand@yahoo.com';
 
 				embedded_svc.settings.displayHelpButton = true; 
 				embedded_svc.settings.language = language;
