--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -158,6 +158,10 @@
 																	{
 																		"label": "Origin",
 																		"value": "Chat"
+																	},
+																	{
+																		"label": "First Name",
+																		"displayToAgent": true
 																	}
 																];
 				
