--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -122,7 +122,7 @@
 				
 				//------- TODO: Pass the language and email parameters
 				var language = 'EN';
-				var email = 'annemarie_strand@yahoo.com';
+				var email = '';
 				//--------TODO end
                 
 				embedded_svc.settings.displayHelpButton = true; 
