--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -120,7 +120,7 @@
 			// Auto generated code for chat settings 
 			var initESW = function(gslbBaseURL) {
 				
-				//------- TODO: Pass the language and email parameters
+				//------- TODO: Pass the language, firstname of the visitor and email parameters
 				var language = 'EN';
 				var email = 'annemarie_strand@yahoo.com';
 				var firstName = 'Annemarie';
