--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -279,7 +279,7 @@
 					'https://uat-truca.cs196.force.com',
 					gslbBaseURL,
 					'00D030000008acd',
-					'Toys_R_Us_Website',
+					'For_Logged_in_User',
 					{
 						baseLiveAgentContentURL: 'https://c.la2-c1cs-ia4.salesforceliveagent.com/content',
 						deploymentId: '57203000000001S',
