--- a/ToysRUsChatFrenchFinal.html
+++ b/ToysRUsChatFrenchFinal.html
@@ -142,7 +142,7 @@
 				
 				// Sets the auto-population of pre-chat form fields
 				embedded_svc.settings.prepopulatedPrechatFields = {Chat_Language__c: language}; 
-				   
+				embedded_svc.settings.widgetFontSize = "13px";   
 				embedded_svc.settings.extraPrechatFormDetails = [	
 																	{
 																		// This is the Person Account record type to find the existing Person Accounts
