--- a/SnapInForDemo.html
+++ b/SnapInForDemo.html
@@ -20,11 +20,33 @@
 				.embeddedServiceSidebarMinimizedDefaultUI .messageContent {margin: 0 1px;}
 				.embeddedServiceHelpButton .helpButton:before { background-size: 100%; width: 50px; height: 50px; right: 0; left: unset; bottom: 44px;}
 				.embeddedServiceSidebarMinimizedDefaultUI.sidebarHeader {bottom:0 !important;}
-				.embeddedServiceHelpButton .helpButton { bottom: 55px; right:30px !important;}
-				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 55px; right:30px !important;}
+				.embeddedServiceHelpButton .helpButton {bottom: 18px; right: 16px !important;}
+				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {bottom: 18px; right: 16px !important;}
 				.embeddedServiceSidebarMinimizedDefaultUI .minimizedImage, .embeddedServiceSidebarMinimizedDefaultUI .embeddedServiceIcon {margin-right: 0;}
-				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%; width: 50px; height: 50px; right: 29px; bottom: 104px; }
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before { background-size: 100%; width: 50px; height: 50px; right: 29px; bottom: 49px; }
 			
+				.embeddedServiceSidebarMinimizedDefaultUI.helpButton {
+				    width: 50px;
+				    height: 50px;
+				    min-width: unset;
+				    min-height: unset;
+				    border-radius: 100%;
+				}
+				.embeddedServiceSidebarMinimizedDefaultUI .minimizedText {
+				    font-size: 0;
+				}
+
+				.sidebarHeader.minimizedContainer.embeddedServiceSidebarMinimizedDefaultUI:before {
+				    background-size: 100%;
+				    width: 50px;
+				    height: 50px;
+				    right: 29px;
+				    bottom: 49px;
+				}
+				.embeddedServiceHelpButton .helpButton {
+				    bottom: 18px;
+				    right: 16px !important;
+				}
 
 			}
 		</style>
