--- a/ToysRUsChatEnglishFinal.html
+++ b/ToysRUsChatEnglishFinal.html
@@ -122,8 +122,8 @@
 				
 				//------- TODO: Pass the language, firstname of the visitor and email parameters
 				var language = 'EN';
-				var email = 'annemarie_strand@yahoo.com';
-				var firstName = 'Annemarie';
+				var email = '';
+				var firstName = '';
 				//--------TODO end
                 
 				embedded_svc.settings.displayHelpButton = true; 
